src/k8s/platform/identity/oauth2-proxy/middleware-forward-auth.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: headlamp-forward-auth
  namespace: oauth2-proxy
spec:
  forwardAuth:
    address: http://oauth2-proxy.oauth2-proxy.svc.cluster.local:80/oauth2/auth?allowed_groups=sgfdevs%3Aplatform-admins
    authResponseHeaders:
      - X-Auth-Request-User
      - X-Auth-Request-Email
      - X-Auth-Request-Access-Token
      - Authorization
    addAuthCookiesToResponse:
      - _oauth2_proxy
      - _oauth2_proxy_csrf
    maxResponseBodySize: 1048576
    trustForwardHeader: true
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: longhorn-forward-auth
  namespace: oauth2-proxy
spec:
  forwardAuth:
    address: http://oauth2-proxy.oauth2-proxy.svc.cluster.local:80/oauth2/auth?allowed_groups=sgfdevs%3Aplatform-admins
    authResponseHeaders:
      - X-Auth-Request-User
      - X-Auth-Request-Email
      - X-Auth-Request-Access-Token
      - Authorization
    addAuthCookiesToResponse:
      - _oauth2_proxy
      - _oauth2_proxy_csrf
    maxResponseBodySize: 1048576
    trustForwardHeader: true
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: seaweedfs-forward-auth
  namespace: oauth2-proxy
spec:
  forwardAuth:
    address: http://oauth2-proxy.oauth2-proxy.svc.cluster.local:80/oauth2/auth?allowed_groups=sgfdevs%3Aplatform-admins
    authResponseHeaders:
      - X-Auth-Request-User
      - X-Auth-Request-Email
      - X-Auth-Request-Access-Token
      - Authorization
    addAuthCookiesToResponse:
      - _oauth2_proxy
      - _oauth2_proxy_csrf
    maxResponseBodySize: 1048576
    trustForwardHeader: true
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: traefik-forward-auth
  namespace: oauth2-proxy
spec:
  forwardAuth:
    address: http://oauth2-proxy.oauth2-proxy.svc.cluster.local:80/oauth2/auth?allowed_groups=sgfdevs%3Aplatform-admins
    authResponseHeaders:
      - X-Auth-Request-User
      - X-Auth-Request-Email
      - X-Auth-Request-Access-Token
      - Authorization
    addAuthCookiesToResponse:
      - _oauth2_proxy
      - _oauth2_proxy_csrf
    maxResponseBodySize: 1048576
    trustForwardHeader: true
