src/k8s/platform/identity/oauth2-proxy/middleware-sign-in-errors.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: oauth2-sign-in-errors
  namespace: oauth2-proxy
spec:
  errors:
    status:
      - "401"
    service:
      name: oauth2-proxy
      port: 80
    query: /oauth2/sign_in?rd={url}
    statusRewrites:
      "401": 302
